--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   get: ^4.6.5
   firebase_auth: ^3.6.3
   loggy: ^2.0.1+1
+  cloud_firestore: ^3.4.5
 
 dev_dependencies:
   flutter_test:
